# QR_AGV

./: .gitignore  .gitmodules  README.md  agv_ws.code-workspace  gen_all_release.sh  install_dependence.sh  nano.save  record_minimal.sh  record_navigation.sh
config/robot_config_sample/: ros_config.sh
proj1_node/: proj1_node
src/: test_map.yaml
src/agv_arduino/: CMakeLists.txt  README.md  package.xml  param.py  param_arduino_lib.py  platformio.ini
src/agv_common_library/: .gitignore  CMakeLists.txt  gen_release_file.py  package.xml  release.sh
src/agv_mongodb/: CMakeLists.txt  README.md  gen_release_file.py  package.xml  release.sh
src/agv_msgs/: .gitignore  CMakeLists.txt  package.xml
src/agv_msgs/msg/: ArduinoIO.msg  CartesianCoordinate.msg  DataMatrixStamped.msg  ErrorRobotToPath.msg  FollowLineControl.msg  HmiControl.msg  LedControl.msg  Pid.msg  WaypointGlobal.msg
src/agv_msgs/srv/: ArrayWaypoints.srv  DirectionMove.srv  SetDigitalOutput.srv  WaypointsPath.srv
src/agv_position_logger/: CMakeLists.txt  package.xml
src/amr_config/: .gitignore  CMakeLists.txt  package.xml
src/arduino_common_library/: CMakeLists.txt  CommonLibrary.h  package.xml
src/arduino_ros/: .gitignore  CMakeLists.txt  gen_release_file.py  package.xml  readme.md  release.sh
src/arduino_serial/: .gitignore  CMakeLists.txt  package.xml
src/charging_process/: .gitignore  CMakeLists.txt  package.xml
src/clear_log/: CMakeLists.txt  gen_release_file.py  package.xml  release.sh
src/cognex_qr_code/: CMakeLists.txt  package.xml
src/control_system/: .gitignore  CMakeLists.txt  gen_release_file.py  package.xml  release.sh
src/docking_charger/: CMakeLists.txt  package.xml
src/elevator/: .gitignore  CMakeLists.txt  README.md  package.xml
src/fastech_io/: .editorconfig  .gitignore  CMakeLists.txt  README.md  package.xml
src/geometry2/: .gitignore
src/hmi_for_agv_release/: CMakeLists.txt  create_shortcut.sh  hmi_for_agv.desktop  package.xml
src/joystick_control/: CMakeLists.txt  package.xml
src/keya_servo/: CMakeLists.txt  gen_release_file.py  package.xml  release.sh
src/led_control/: CMakeLists.txt  gen_release_file.py  package.xml  release.sh
src/lenet_tape_sensor/: .gitignore  CMakeLists.txt  package.xml
src/lidar_signal/: .gitignore  CMakeLists.txt  package.xml
src/lift/: CMakeLists.txt  package.xml
src/matehan/: .gitignore  CMakeLists.txt  package.xml
src/mission_manager/: AMR_Mission_structure.drawio  CMakeLists.txt  package.xml  readme.md
src/mission_manager/action/: CheckPositionStatus.action  Mission.action
src/mission_manager/action_servers/: check_position_server.py
src/mission_manager/cfg/: mission_list.yaml
src/mission_manager/db/: mission_db.json
src/mission_manager/launch/: mission_manager.launch
src/mission_manager/mission_list/: charge.json  drop.json  footprint.json  mission_principle.json  missions_move.json  move_and_charge.json  pick_and_drop.json  pickup.json  sound.json  test_all.json  test_final.json
src/mission_manager/mongo/: datalist.json  maps.json  mission_groups.json  missions.json
src/mission_manager/scripts/: log_ultils.py  mission_client.py  mission_manager_server.py  mission_server.py  test.sh
src/moving_control/: CMakeLists.txt  README.md  compile.py  package.xml  release.py
src/neo-local-planner-custom/: CMakeLists.txt
src/odometry_calculate/: .gitignore  CMakeLists.txt  gen_release_file.py  package.xml  release.sh
src/passbox/: CMakeLists.txt  README.md  package.xml
src/pointcloud_to_laserscan/: CMakeLists.txt
src/qr_code_global_planner/: CMakeLists.txt  package.xml
src/qr_gls621/: .gitignore  CHANGELOG.rst  CMakeLists.txt  package.xml  release.sh  update_changelog.sh
src/qr_label_tracker/: CMakeLists.txt  package.xml
src/qr_localization/: CMakeLists.txt  package.xml
src/qr_localization/cfg/: config_qr_localization.yaml
src/qr_localization/include/qr_localization/: qr_code_localization.h
src/qr_localization/launch/: qr_localization.launch
src/qr_localization/scripts/: coordinates_qr_code.py  publish_map_to_odom.py
src/qr_localization/src/: qr_code_localization.cpp
src/read_battery/: .gitignore  CMakeLists.txt  package.xml
src/reset_esp/: CMakeLists.txt  package.xml
src/robot_pose_publisher/: CMakeLists.txt
src/timed_roslaunch/: CMakeLists.txt
src/traffic_control/traffic_control/server/: CMakeLists.txt  package.xml
src/traffic_control/traffic_control/server/include/server/: client_agv.h  server_traffic_control.h
src/traffic_control/traffic_control/server/src/: client_agv.cpp  server_traffic_control.cpp  test_eigen.cpp
src/vl53l5cx/: .gitignore  CMakeLists.txt  install_library_vl53l5cx.sh  package.xml  ros.h
src/vl53l5cx/arduino/ros_driver_backward/src/: main.cpp
src/vl53l5cx/arduino/ros_driver_forward/: platformio.ini
src/vl53l5cx/arduino/ros_driver_forward/src/: main.cpp
src/vl53l5cx/arduino/sensor_tester/: platformio.ini  readme.md
src/vl53l5cx/arduino/sensor_tester/src/: main.cpp
src/vl53l5cx/cfg/: algorithm.json  default_range.json  end.json  fake_data.json  max_noise.json  min_noise.json  minimum.json  noise_removal.json  set_safety_goal.json  vl53l5cx_config.json
src/vl53l5cx/config/: lidarvl53l5cx.yaml  safety_config_ng.yaml
src/vl53l5cx/include/: vl53l5cx_ros.h
src/vl53l5cx/launch/: array2pcl.launch  config_scan.launch  esp_rosserial.launch  robot.rviz  rviz_pcl.launch  safety_scan.rviz  serial_vl53l5.launch  static_tf.launch  vl53_rosserial.launch
src/vl53l5cx/msg/: Safety_Esp.msg  Vl53l5cxRanges.msg  ultra_vl53l5_safety.msg  vl53l5cx_safety.msg
src/vl53l5cx/scripts/: algorithm_new.py  calibrate_sensor_vl53l5cx.py  check_cpu.py  common_funtion.py  config_vl53l5cx.py  data.ply  dual_pointcloud.py  estimation_data.py  fake_data.py  four_sensor_pcl.py  jsonfile.py  math.py  modbus_log.csv  numpy_test.h  param_correction.py  pcl_test.py  pointcloud_vl53l5.py  pub_vel_test.py  scan_safety_pcl.py  serial_esp_connect.py  setsafety.py  test.py  vl53_dung.py  vl53_sensors.py  vl53l5cx_node.py
src/vl53l5cx/src/: vl53l5cx_ros.cpp
(+556 files in other folders)
