<package format="2">
  <name>server</name>
  <version>0.0.1</version>
  <description>The server package</description>
  <maintainer email="cuongtien@gmail.com">cuong tien</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tuw_multi_robot_msgs</build_depend>
  <build_depend>jsoncpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tuw_multi_robot_msgs</exec_depend>
  <exec_depend>jsoncpp</exec_depend>
  <export>
  </export>
</package>